# ChangeLog for net-im/skype
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/skype/ChangeLog,v 1.1 2004/06/21 23:04:56 humpback Exp $

*skype-0.90.0.3 (21 Jun 2004)

  21 Jun 2004; Gustavo Felisberto <humpback@gentoo.org>;
  skype-0.90.0.3.ebuild:
  Initial import, thanks to Boris Wachtmeister, Henti Smith and Elias Probst in
  bug #54665
