@@ -1,5 +1,5 @@
-MD5 8d0c388415b325c86eb215c05b49f345 skype-0.90.0.3.ebuild 1794
+MD5 a367c405fcb2f5e4d88cc4036c936cec skype-0.90.0.3.ebuild 1916
 MD5 f05eba693923cfb1455383da06536323 metadata.xml 492
-MD5 c3b7318d39204e2da7129071653eab0e ChangeLog 414
+MD5 35d038d4b651c668ed6cfce4ff251288 ChangeLog 550
 MD5 5b5a95765f789de78e551a942c48d452 files/digest-skype-0.90.0.3 153
-MD5 f98dda49ec9e1a08e953e6d5b5085ab5 files/artsskype 770
+MD5 8a4fc376b937d0e6ac2c0b62884ee99a files/artsskype 991
