@@ -1,6 +1,10 @@
 # ChangeLog for net-im/skype
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/skype/ChangeLog,v 1.1 2004/06/21 23:04:56 humpback Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/skype/ChangeLog,v 1.2 2004/06/22 11:29:32 humpback Exp $
+
+  22 Jun 2004; Gustavo Felisberto <humpback@gentoo.org>;
+  skype-0.90.0.3.ebuild, files/artsskype:
+  Updated ebuild and wrapper script
 
 *skype-0.90.0.3 (21 Jun 2004)
 
